Implement IDE suggestions pt. 1